# advent_of_code

2022/python/: pyproject.toml
2022/python/day01/: day_01.py  test_day_one.py
2022/python/day02/: day_02.py
2022/python/day03/: day_03.py
2022/python/day04/: day_04.py
2022/python/day05/: day_05.py
2022/python/day06/: day_06.py
2022/python/day07/: day_07.py
2022/python/day08/: day_08.py
2022/python/day09/: day_09.py
2022/python/day10/: day_10.py
2022/python/day11/: day_11.py
2022/python/day12/: day_12.py
