[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ian Dolge <noreply>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
